--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-scripts",
+  "name": "@jnmorse/react-scripts",
   "version": "3.1.2",
   "description": "Configuration and scripts for Create React App.",
   "repository": {
@@ -50,9 +50,9 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "file-loader": "^4.1.0",
+    "fs-extra": "^8.1.0",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jest": "24.9.0",
@@ -83,6 +83,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "devDependencies": {
+    "eslint-config-jnmorse": "^2.5.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
